fix: scrollbar jumping around when clicking on sides (ref #420)

--- a/packages/simplebar/src/simplebar.css
+++ b/packages/simplebar/src/simplebar.css
@@ -132,8 +132,8 @@
 
 .simplebar-scrollbar {
   position: absolute;
-  right: 2px;
-  width: 7px;
+  left: 0;
+  right: 0;
   min-height: 10px;
 }
 
@@ -142,8 +142,8 @@
   content: '';
   background: black;
   border-radius: 7px;
-  left: 0;
-  right: 0;
+  left: 2px;
+  right: 2px;
   opacity: 0;
   transition: opacity 0.2s linear;
 }
